--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,8 +25,9 @@ jobs:
 
       - name: Install Helm
         uses: azure/setup-helm@v3
-        env: 
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        with:
+          version: 'latest' # default is latest (stable)
+          token: ${{ secrets.GITHUB_TOKEN }} # only needed if version is 'latest'
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
