Disable persistent media

--- a/charts/netbox/values.yaml
+++ b/charts/netbox/values.yaml
@@ -469,7 +469,7 @@ serviceAccount:
 
 ## Storage configuration for media
 persistence:
-  enabled: true
+  enabled: false
   ##
   ## Existing claim to use
   existingClaim: ""
